fixed box shadow and subtitle spacing on test polaroid recreation

--- a/client/css/pages/creators.css
+++ b/client/css/pages/creators.css
@@ -38,12 +38,13 @@
 
 
 /* POLARIOD FORMATTING */
-/*.polBox {
+.polBox {
     margin-bottom: 10em;
     margin-top: 2em;
     -webkit-box-shadow: 0 3px 6px rgba(0,0,0,.25);
     -moz-box-shadow: 0 3px 6px rgba(0,0,0,.25);
-    padding: 10px 10px 35px;
+    box-shadow: 4px 4px 9px rgba(0,0,0,.8);
+    padding: 10px 10px 25px;
     width: 20em;
 }
 
@@ -52,12 +53,13 @@
 }
 
 .authorTitle {
-font-size: 1.1em;
+    margin-top: 15px;
+    font-size: 1.1em;
 }
 
 .authorSubtitle {
-    font-size: 0.6em;
-}*/
+    font-size: 0.8em;
+}
 
 /*END POLAROID FORMATTING*/
 
